FFE-62: Fix print border bug
This commit fixes some overflowing dashed border around the icon
when printed.

--- a/less/ffe-message-box.less
+++ b/less/ffe-message-box.less
@@ -72,7 +72,7 @@
 
         &__icon {
             border-bottom: 2px dashed @ffe-black;
-            margin-bottom: -30px;
+            margin-bottom: -33.5px;
         }
 
     }
